--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section class="second--section">
         <div>
             <p>
-                „ TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა  <br> 
+                „TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა  <br> 
                 საინფორმაციო ტექნოლოგიებით დაინტერესებულ ადამიანებს <br> 
                 გთავაზობთ სრულად დაფინანსებულ ონლაინ საგანმანათლებლო <br>
                 პრაქტიკულ კურსებს  სხვადასხვა ICT მიმართულებით. <br>
@@ -212,7 +212,7 @@
 
         </div>
     </footer>
-
+    test
 
 
     <script type="module" class="random" src="javascript/index.js"></script>
