--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
-    <nav class="navbar sticky-top">
+    <nav id="" class="navbar sticky-top">
         <div class="logo">        
             <svg preserveAspectRatio="xMidYMid meet" data-bbox="-0.049 -0.035 160.05 35.031" xmlns="http://www.w3.org/2000/svg" viewBox="-0.049 -0.035 160.05 35.031" height="40" width="182" data-type="color" role="presentation" aria-hidden="true">
             <g>
